--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
         </div><!-- /.site-header-five__wrapper -->
 
         <section class="banner-four">
-            <img src="../assets/images/resources/banner-4-1.png" class="banner-four__moc" alt="">
+            <img src="../assets/images/newImages/img7.jpg" class="banner-four__moc" alt="">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
@@ -227,7 +227,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image" ></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-hand-holding-usd"></i>
@@ -240,7 +240,7 @@
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-umbrella-beach"></i>
@@ -253,7 +253,7 @@
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-paper-plane"></i>
@@ -266,7 +266,7 @@
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-chart-network"></i>
@@ -334,7 +334,7 @@
         <section class="progress-one mag-bottom">
             <img src="../assets/images/shapes/progress-bg-1.png" alt="" class="progress-one__bg">
             <div class="container">
-                <img src="../assets/images/resources/progress-1-1.png" alt="" class="progress-one__moc">
+                <img src="../assets/images/newImages/img8.jpg" alt="" class="progress-one__moc">
                 <div class="row justify-content-end">
                     <div class="col-lg-6">
                         <div class="progress-one__content">
