--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         </div><!-- /.site-header-five__wrapper -->
 
 
-        <section class="banner-five">
+        <section class="banner-five miBanner">
             <img src="assets/images/backgrounds/banner-bg-5-1.png" class="banner-five__bg-1" alt="">
             <img src="assets/images/backgrounds/banner-bg-5-2.png" class="banner-five__bg-2" alt="">
 
-            <img src="assets/images/resources/banner-5-moc-1-1.png" alt="" class="banner-five__moc">
+            <img src="assets/images/newImages/header.jpg" alt="" class="banner-five__moc">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6">
@@ -173,7 +173,7 @@
         <section class="about-two">
             <img src="assets/images/shapes/about-two-bg.png" alt="" class="about-two__bg">
             <div class="container">
-                <img src="assets/images/resources/cta-2-1.png" alt="" class="about-two__moc">
+                <img src="assets/images/newImages/img1.jpeg" alt="" class="about-two__moc">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="about-two__content">
@@ -218,7 +218,7 @@
                         <div class="my-auto">
                             <div class="cta-three__image">
                                 <img src="assets/images/shapes/cta-3-1-shape.png" alt="" class="cta-three__image-shape">
-                                <img src="assets/images/resources/cta-3-1.jpg" alt="">
+                                <img src="assets/images/newImages/img2.jpg" alt="">
                             </div><!-- /.cta-three__image -->
                         </div><!-- /.my-auto -->
                     </div><!-- /.col-lg-7 -->
@@ -324,7 +324,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-hand-holding-usd"></i>
@@ -337,7 +337,7 @@
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-umbrella-beach"></i>
@@ -350,7 +350,7 @@
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-paper-plane"></i>
@@ -363,7 +363,7 @@
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="service-two__single js-tilt">
-                                        <div class="service-two__single-image" style="background-image: url(assets/images/backgrounds/service-bg-1-1.jpg);"></div>
+                                        <div class="service-two__single-image"></div>
                                         <!-- /.service-two__single-image -->
                                         <div class="service-two__single-inner">
                                             <i class="fal fa-chart-network"></i>
@@ -432,7 +432,7 @@
             <div class="banner-three__circle-1"></div><!-- /.banner-three__circle-1 -->
             <div class="banner-three__circle-2"></div><!-- /.banner-three__circle-2 -->
 
-            <img src="assets/images/resources/service-d-moc-2.png" alt="" class="banner-three__moc">
+            <img src="assets/images/newImages/img3.jpg" alt="" class="banner-three__moc">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-9">
