--- a/about-food/index.html
+++ b/about-food/index.html
@@ -141,7 +141,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <img src="../assets/images/resources/cta-4-1.png" class="about-three__moc" alt="">
+                        <img src="../assets/images/newImages/img9.jpg" class="about-three__moc" alt="">
                     </div><!-- /.col-lg-6 -->
                     <div class="col-lg-6">
                         <div class="about-three__content">
@@ -191,7 +191,7 @@
                     </div><!-- /.col-lg-6 -->
                     <div class="col-lg-6">
                         <div class="about-five__image">
-                            <img src="../assets/images/resources/about-5-1.png" alt="">
+                            <img src="../assets/images/newImages/img10.jpg" alt="">
                         </div><!-- /.about-five__image -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
@@ -215,7 +215,7 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-1.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-bullseye-pointer"></i> <a href="#">Lorem Ipsum</a></h3>
@@ -226,7 +226,7 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-2.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-chart-pie"></i> <a href="#">Lorem Ipsum</a></h3>
@@ -237,7 +237,7 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-3.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-recycle"></i> <a href="#">Lorem Ipsum</a></h3>
@@ -249,21 +249,10 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-1.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-bullseye-pointer"></i> <a href="#">Lorem Ipsum</a></h3>
-                                <p>Sed ut perspiciatis unde omnis istena error sit voluptatem accusane </p>
-                            </div><!-- /.service-six__content -->
-                        </div><!-- /.service-six__single -->
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <div class="service-six__single">
-                            <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-2.jpg" alt="">
-                            </div><!-- /.service-six__image -->
-                            <div class="service-six__content">
-                                <h3><i class="far fa-chart-pie"></i> <a href="#">Lorem Research</a></h3>
                                 <p>Sed ut perspiciatis unde omnis istena error sit voluptatem accusane </p>
                             </div><!-- /.service-six__content -->
                         </div><!-- /.service-six__single -->
@@ -284,7 +273,7 @@
                             <div class="step-one__counter">
                                 Step <span></span>
                             </div><!-- /.step-one__counter -->
-                            <img src="../assets/images/resources/step-moc-1-1.png" alt="">
+                            <img src="../assets/images/newImages/img14.jpg" alt="">
                         </div><!-- /.step-one__image-inner -->
                     </div><!-- /.step-one__image -->
                     <div class="step-one__content">
@@ -300,7 +289,7 @@
                             <div class="step-one__counter">
                                 Step <span></span>
                             </div><!-- /.step-one__counter -->
-                            <img src="../assets/images/resources/step-moc-1-2.png" alt="">
+                            <img src="../assets/images/newImages/img13.jpg" alt="">
                         </div><!-- /.step-one__image-inner -->
                     </div><!-- /.step-one__image -->
                     <div class="step-one__content">
@@ -316,7 +305,7 @@
                             <div class="step-one__counter">
                                 Step <span></span>
                             </div><!-- /.step-one__counter -->
-                            <img src="../assets/images/resources/step-moc-1-3.png" alt="">
+                            <img src="../assets/images/newImages/img12.jpg" alt="">
                         </div><!-- /.step-one__image-inner -->
                     </div><!-- /.step-one__image -->
                     <div class="step-one__content">
