--- a/boxes/index.html
+++ b/boxes/index.html
@@ -93,10 +93,10 @@
                 <img src="../assets/images/shapes/banner-shape-1-1.png" alt="" class="banner-two__moc ">
                 <div class="banner-two__image-carousel owl-carousel owl-theme thm__owl-carousel pad-top" data-options='{"loop": true, "items": 1, "margin": 0, "dots": false, "nav": false, "animateOut": &quot;slideOutDown&quot;, "animateIn": &quot;fadeIn&quot;, "active": true, "smartSpeed": 1000, "autoplay": true, "autoplayTimeout": 7000, "autoplayHoverPause": false}'>
                     <div class="item">
-                        <img src="../assets/images/resources/banner-2-1.jpg" alt="">
+                        <img src="../assets/images/newImages/img4.jpeg" alt="">
                     </div><!-- /.item -->
                     <div class="item">
-                        <img src="../assets/images/resources/banner-2-2.jpg" alt="">
+                        <img src="../assets/images/newImages/img15.jpg" alt="">
                     </div><!-- /.item -->
                 </div><!-- /.banner-two__image-carousel -->
                 <div class="container">
@@ -118,7 +118,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="video-one__box wow fadeInLeft" data-wow-duration="1500ms">
-                                <img src="../assets/images/resources/video-1-1.jpg" alt="">
+                                <img src="../assets/images/newImages/img5.jpg" alt="">
                                 <a href="https://www.youtube.com/watch?v=Rw1JBhaoHBs" class="video-popup video-one__btn"><i class="fa fa-play"></i></a><!-- /.video-popup video-one__btn -->
                             </div><!-- /.video-one__box -->
                         </div><!-- /.col-lg-6 -->
@@ -195,7 +195,7 @@
                         </div><!-- /.col-lg-6 -->
                         <div class="col-lg-6">
                             <div class="about-five__image">
-                                <img src="../assets/images/resources/about-5-1.png" alt="">
+                                <img src="../assets/images/newImages/img6.jpg" alt="">
                             </div><!-- /.about-five__image -->
                         </div><!-- /.col-lg-6 -->
                     </div><!-- /.row -->
@@ -209,7 +209,7 @@
                             <div class="my-auto">
                                 <div class="cta-three__image">
                                     <img src="../assets/images/shapes/cta-3-1-shape-2.png" alt="" class="cta-three__image-shape">
-                                    <img src="../assets/images/resources/cta-3-2.jpg" alt="">
+                                    <img src="../assets/images/newImages/img2.jpg" alt="">
                                 </div><!-- /.cta-three__image -->
                             </div><!-- /.my-auto -->
                         </div><!-- /.col-lg-6 -->
