--- a/business/index.html
+++ b/business/index.html
@@ -93,10 +93,10 @@
             <img src="../assets/images/shapes/banner-shape-1-1.png" alt="" class="banner-two__moc ">
             <div class="banner-two__image-carousel owl-carousel owl-theme thm__owl-carousel pad-top" data-options='{"loop": true, "items": 1, "margin": 0, "dots": false, "nav": false, "animateOut": &quot;slideOutDown&quot;, "animateIn": &quot;fadeIn&quot;, "active": true, "smartSpeed": 1000, "autoplay": true, "autoplayTimeout": 7000, "autoplayHoverPause": false}'>
                 <div class="item">
-                    <img src="../assets/images/resources/banner-2-1.jpg" alt="">
+                    <img src="../assets/images/newImages/img15.jpg" alt="">
                 </div><!-- /.item -->
                 <div class="item">
-                    <img src="../assets/images/resources/banner-2-2.jpg" alt="">
+                    <img src="../assets/images/newImages/img4.jpeg" alt="">
                 </div><!-- /.item -->
             </div><!-- /.banner-two__image-carousel -->
             <div class="container">
@@ -223,7 +223,7 @@
                         </div><!-- /.about-four__content -->
                     </div><!-- /.col-lg-6 -->
                     <div class="col-lg-6">
-                        <img src="../assets/images/resources/cta-5-1.png" class="about-four__moc" alt="">
+                        <img src="../assets/images/newImages/img16.jpg" class="about-four__moc" alt="">
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
             </div><!-- /.container -->
@@ -247,7 +247,7 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-1.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-bullseye-pointer"></i> <a href="#">Larger Audience</a></h3>
@@ -258,7 +258,7 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-2.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-chart-pie"></i> <a href="#">No Waste</a></h3>
@@ -269,7 +269,7 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-3.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-recycle"></i> <a href="#">Continuous Testing</a></h3>
@@ -281,32 +281,10 @@
                     <div class="item">
                         <div class="service-six__single">
                             <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-1.jpg" alt="">
+                                <img src="../assets/images/newImages/img11.jpg" alt="">
                             </div><!-- /.service-six__image -->
                             <div class="service-six__content">
                                 <h3><i class="far fa-bullseye-pointer"></i> <a href="#">Fast Processing</a></h3>
-                                <p>Sed ut perspiciatis unde omnis istena error sit voluptatem accusane </p>
-                            </div><!-- /.service-six__content -->
-                        </div><!-- /.service-six__single -->
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <div class="service-six__single">
-                            <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-2.jpg" alt="">
-                            </div><!-- /.service-six__image -->
-                            <div class="service-six__content">
-                                <h3><i class="far fa-chart-pie"></i> <a href="#">Transparency </a></h3>
-                                <p>Sed ut perspiciatis unde omnis istena error sit voluptatem accusane </p>
-                            </div><!-- /.service-six__content -->
-                        </div><!-- /.service-six__single -->
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <div class="service-six__single">
-                            <div class="service-six__image">
-                                <img src="../assets/images/services/service-1-3.jpg" alt="">
-                            </div><!-- /.service-six__image -->
-                            <div class="service-six__content">
-                                <h3><i class="far fa-recycle"></i> <a href="#">Continuous Testing</a></h3>
                                 <p>Sed ut perspiciatis unde omnis istena error sit voluptatem accusane </p>
                             </div><!-- /.service-six__content -->
                         </div><!-- /.service-six__single -->
