--- a/employees/index.html
+++ b/employees/index.html
@@ -239,9 +239,9 @@
                 </div><!-- /.container -->
             </section><!-- /.pricing-two -->
 
-            <section class="cta-ten mag-top">
+            <section class="cta-ten mag-top mbbut">
                 <div class="container">
-                    <img src="../assets/images/resources/cta-9-1.png" class="cta-ten__moc" alt="">
+                    <img src="../assets/images/newImages/img17.jpg" class="cta-ten__moc" alt="">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="cta-ten__content">
