--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <section class="about-two">
             <img src="assets/images/shapes/about-two-bg.png" alt="" class="about-two__bg">
             <div class="container">
-                <img src="assets/images/newImages/img1.jpeg" alt="" class="about-two__moc">
+                <img src="assets/images/newImages/img1.jpg" alt="" class="about-two__moc">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="about-two__content">
