--- a/invite/index.html
+++ b/invite/index.html
@@ -114,7 +114,7 @@
                             <div class="step-one__counter">
                                 Step <span></span>
                             </div><!-- /.step-one__counter -->
-                            <img src="../assets/images/resources/step-moc-1-1.png" alt="">
+                            <img src="../assets/images/newImages/img14.jpg" alt="">
                         </div><!-- /.step-one__image-inner -->
                     </div><!-- /.step-one__image -->
                     <div class="step-one__content">
@@ -128,7 +128,7 @@
                             <div class="step-one__counter">
                                 Step <span></span>
                             </div><!-- /.step-one__counter -->
-                            <img src="../assets/images/resources/step-moc-1-2.png" alt="">
+                            <img src="../assets/images/newImages/img13.jpg" alt="">
                         </div><!-- /.step-one__image-inner -->
                     </div><!-- /.step-one__image -->
                     <div class="step-one__content">
@@ -142,7 +142,7 @@
                             <div class="step-one__counter">
                                 Step <span></span>
                             </div><!-- /.step-one__counter -->
-                            <img src="../assets/images/resources/step-moc-1-3.png" alt="">
+                            <img src="../assets/images/newImages/img11.jpg" alt="">
                         </div><!-- /.step-one__image-inner -->
                     </div><!-- /.step-one__image -->
                     <div class="step-one__content">
@@ -177,24 +177,24 @@
                         <div class="col-xl-3 col-lg-6">
                             <div class="footer-widget footer-widget__links">
                                 <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
-                                <a class="footer-widget__links-list list-unstyled">
+                                <ul class="footer-widget__links-list list-unstyled">
                                     <li><a href="/about">About Us</a></li>
                                     <li><a href="/boxes">Manna Boxes</a></li>
                                     <li><a href="/business">Manna Business</a></li>
                                     <li><a href="/employees">Manna Employees</a></li>
                                     <li><a href="/about-food">About Food Waste</a></li>
-                                </a><!-- /.footer-widget__links-list -->
+                                </ul><!-- /.footer-widget__links-list -->
                             </div><!-- /.footer-widget footer-widget__post -->
                         </div><!-- /.col-lg-3 -->
                         <div class="col-xl-3 col-lg-6">
                             <div class="footer-widget footer-widget__links">
                                 <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
-                                <a class="footer-widget__links-list list-unstyled">
+                                <ul class="footer-widget__links-list list-unstyled">
                                     <li><a href="/invite">Invite Friends?</a></li>
                                     <li><a href="/contact">Contact Us</a></li>
                                     <li><a href="/invite">Invite Friends?</a></li>
                                     <li><a href="/blog">Blog</a></li>
-                                </a><!-- /.footer-widget__links-list -->
+                                </ul><!-- /.footer-widget__links-list -->
                             </div><!-- /.footer-widget footer-widget__post -->
                         </div><!-- /.col-lg-3 -->
                         <div class="col-xl-3 col-lg-6">
