--- a/boxes/index.html
+++ b/boxes/index.html
@@ -103,9 +103,8 @@
                     <div class="row">
                         <div class="col-xl-7">
                             <div class="banner-two__content">
-                                <h3><span>Fresh Products </span> <br> Delivered to <br> Your <em>Doorstep</em></h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt
-                                    ut labore et dolore magna</p>
+                                <h3>Fresh produce each week, delivered directly to your door</h3>
+                                <p>Skip the supermarket and get your 5-a-day and more, delivered weekly. Fresh, surplus produce that helps fight food waste within Local farms and across big brands too.</p>
                                 <a href="#" class="thm-btn banner-two__btn">Order my Box <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn -->
                             </div><!-- /.banner-two__content -->
                         </div><!-- /.col-xl-7 -->
@@ -129,28 +128,25 @@
                                         <p>Get it Delivered</p>
                                         <h3>Eat well, and <br> protect the earth.</h3>
                                     </div><!-- /.block-title-two -->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tem
-                                        por incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                                    <p>Each of our boxes are designed to bring you delicious produce, whilst protecting the environment by reducing waste. Whether it be fruit & vegetables from farms across Lagos, or the range of surplus products from exciting brands we partner with - every time you enjoy a Manna Box, you are joining our food waste fighting community. Why should you? </p>
                                     <ul class="list-unstyled video-one__list">
                                         <li>
                                             <i class="far fa-check"></i>
-                                            Smashing Book 6 Is Here New Frontiers In Web Design
+                                            Half Price Cheaper
                                         </li>
                                         <li>
                                             <i class="far fa-check"></i>
-                                            Introduction To Animation And The iMessage App Store With Shruggie
+                                            100% Healthier as they are fresh from farm
                                         </li>
                                         <li>
                                             <i class="far fa-check"></i>
-                                            Get Your Mobile Site Ready For The 2018 Holiday ways goods
+                                            Budget Friendly 
                                         </li>
                                         <li>
                                             <i class="far fa-check"></i>
-                                            Making Distributed Product Teams Work More Efficiently other
+                                            Varieties as your requirements may be
                                         </li>
                                     </ul><!-- /.list-unstyled video-one__list -->
-                                    <a href="#" class="thm-btn">Read More <i class="fa fa-angle-double-right"></i></a>
                                     <!-- /.thm-btn -->
                                 </div><!-- /.video-one__content -->
                             </div><!-- /.my-auto -->
@@ -167,27 +163,18 @@
                                 <div class="block-title-two text-left">
                                     <h3>How Does It Work ?</h3>
                                 </div><!-- /.block-title-two -->
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tem <br> or incididunt ut labore et dolore magna aliqua. </p>
                                 <ul class="about-five__list list-unstyled">
                                     <li>
                                         <i class="far fa-check"></i>
-                                        But we must be sit amet consectetur adipisicing elit sed do eiusmod te
+                                        We source fresh produce from farmers and wholesalers - plus we partner with a variety of big brands that want to send their surplus products to you
                                     </li>
                                     <li>
                                         <i class="far fa-check"></i>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit sed eiusmod was tempor
+                                        You choose the Manna Box that will suit your household best, and when you want it delivered weekly
                                     </li>
                                     <li>
                                         <i class="far fa-check"></i>
-                                        Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et
-                                    </li>
-                                    <li>
-                                        <i class="far fa-check"></i>
-                                        Once the must be sit amet consectetur adipisicing elit sed do eiusmod ways
-                                    </li>
-                                    <li>
-                                        <i class="far fa-check"></i>
-                                        But we must be sit amet consectetur adipisicing elit sed do eius other system
+                                        We deliver a fresh box of produce each week for you to enjoy! 
                                     </li>
                                 </ul><!-- /.about-five__list list-unstyled -->
                                 <a href="#" class="thm-btn about-five__btn">Get Started <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn about-five__btn -->
@@ -216,12 +203,12 @@
                         <div class="col-lg-6">
                             <div class="faq-one__block">
                                 <div class="block-title-two text-left">
-                                    <h3>What would be in my <br> Box ?</h3>
+                                    <h3>Get the Manna <br> Box</h3>
                                 </div><!-- /.block-title-two -->
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
                                     <div class="accrodion active">
                                         <div class="accrodion-title">
-                                            <h4>Lorem ipsum dolor sit amet consectetur ?</h4>
+                                            <h4>How do I order the Manna box?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
@@ -231,7 +218,7 @@
                                     </div>
                                     <div class="accrodion ">
                                         <div class="accrodion-title">
-                                            <h4>Lorem ipsum dolor sit amet consectetur ?</h4>
+                                            <h4>Can I buy the Karma box in the Manna app?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
@@ -241,7 +228,7 @@
                                     </div>
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Lorem ipsum dolor sit amet consectetur ?</h4>
+                                            <h4>Can I get the Manna box bi weekly?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
@@ -251,7 +238,7 @@
                                     </div>
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Lorem ipsum dolor sit amet consectetur ?</h4>
+                                            <h4>You don't seem to be delivering the Karma box to my area, what do I do?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
@@ -274,35 +261,30 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <div class="service-four__single">
-                                <i class="fal fa-atom-alt"></i>
-                                <h3><a href="#">Affordable and <br> Beautiful</a></h3>
-                                <p>Sed ut perspiciatis unde omniste <br> natus error sit voluptatem accutium <br> doloremque
-                                    laudantium</p>
-                            </div><!-- /.service-four__single -->
-                        </div><!-- /.col-lg-3 col-md-6 -->
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-four__single">
                                 <i class="fal fa-bullseye-arrow"></i>
-                                <h3><a href="#">Affordable and <br> Beautiful</a></h3>
-                                        with Goals</a></h3>
-                                <p>Sed ut perspiciatis unde omniste <br> natus error sit voluptatem accutium <br> doloremque
-                                    laudantium</p>
+                                <h3>Save food with Goals</h3>
+                                <p>Did you know that almost half of all food produced is never eaten? Our aim is to ensure that all food that is produced is eaten and enjoyed.</p>
                             </div><!-- /.service-four__single -->
                         </div><!-- /.col-lg-3 col-md-6 -->
                         <div class="col-lg-3 col-md-6">
                             <div class="service-four__single">
                                 <i class="fal fa-recycle"></i>
-                                <h3><a href="#">Affordable and <br> Beautiful</a></h3>
-                                <p>Sed ut perspiciatis unde omniste <br> natus error sit voluptatem accutium <br> doloremque
-                                    laudantium</p>
+                                <h3>Simple & easy</h3>
+                                <p>Your weekly dose of fresh produce, delivered directly to your door hassle free. Good for you, good for the planet.</p>
                             </div><!-- /.service-four__single -->
                         </div><!-- /.col-lg-3 col-md-6 -->
                         <div class="col-lg-3 col-md-6">
                             <div class="service-four__single">
                                 <i class="fal fa-anchor"></i>
-                                <h3><a href="#">Affordable and <br> Beautiful</a></h3>
-                                <p>Sed ut perspiciatis unde omniste <br> natus error sit voluptatem accutium <br> doloremque
-                                    laudantium</p>
+                                <h3>Environmental impact</h3>
+                                <p>Taking into consideration the same 5-year period (2007-2012) in Nigeria, 3.4 million tonnes of greenhouse gases were avoided per year.</p>
+                            </div><!-- /.service-four__single -->
+                        </div><!-- /.col-lg-3 col-md-6 -->
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-four__single">
+                                <i class="fal fa-anchor"></i>
+                                <h3>On time delivery?</h3>
+                                <p>Plan your meals. Make a shopping list and rely on Manna’s delivery to make sure your package gets to you on record time, you’ll also save money!</p>
                             </div><!-- /.service-four__single -->
                         </div><!-- /.col-lg-3 col-md-6 -->
                     </div><!-- /.row -->
@@ -311,8 +293,8 @@
             </section><!-- /.service-four -->
 
             <div class="site-footer-two">
-                <img src="../assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
-                <img src="../assets/images/shapes/footer-shape-2-2.png" alt="" class="site-footer-two__shape-2">
+                <img src="assets/images/shapes/footer-shape-2-1.png" alt="" class="site-footer-two__shape-1">
+                <img src="assets/images/shapes/footer-shape-2-2.png" alt="" class="site-footer-two__shape-2">
                 <div class="site-footer-two__upper">
                     <div class="container">
                         <div class="row">
@@ -321,7 +303,7 @@
                                     <a href="/">
                                         <img src="../assets/images/logo-2-2.png" alt="">
                                     </a>
-                                    <p>But we must ipsum dolor sit amet con sectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+                                    <p>Creating the world's first zero food waste generation.</p>
                                     <div class="footer-widget__social">
                                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -334,7 +316,6 @@
                                 <div class="footer-widget footer-widget__links">
                                     <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
                                     <ul class="footer-widget__links-list list-unstyled">
-                                        <li><a href="/about">About Us</a></li>
                                         <li><a href="/boxes">Manna Boxes</a></li>
                                         <li><a href="/business">Manna Business</a></li>
                                         <li><a href="/employees">Manna Employees</a></li>
@@ -344,9 +325,9 @@
                             </div><!-- /.col-lg-3 -->
                             <div class="col-xl-3 col-lg-6">
                                 <div class="footer-widget footer-widget__links">
-                                    <h3 class="footer-widget__title">Quick Links</h3><!-- /.footer-widget__title -->
+                                    <h3 class="footer-widget__title">Check us out</h3><!-- /.footer-widget__title -->
                                     <ul class="footer-widget__links-list list-unstyled">
-                                        <li><a href="/invite">Invite Friends?</a></li>
+                                        <li><a href="/about">About Us</a></li>
                                         <li><a href="/contact">Contact Us</a></li>
                                         <li><a href="/invite">Invite Friends?</a></li>
                                         <li><a href="/blog">Blog</a></li>
@@ -365,11 +346,11 @@
                                     <ul class="footer-widget__contact-list list-unstyled">
                                         <li>
                                             <i class="far fa-envelope"></i>
-                                            <a href="mailto:support@gmail.com">support@gmail.com</a>
+                                            <a href="mailto:support@gmail.com">support@getmanna.ng</a>
                                         </li>
                                         <li>
                                             <i class="far fa-phone"></i>
-                                            <a href="tel:+823-654-445-64">+823 654 445 64</a>
+                                            <a href="tel:+823-654-445-64">+2348064997824</a>
                                         </li>
                                     </ul><!-- /.footer-widget__contact-list -->
                                 </div><!-- /.footer-widget footer-widget__post -->
